cel/M0002-metadata-annotations/policy-M0002.yaml
# Copyright (C) Nicolas Lamirault <nicolas.lamirault@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

---
apiVersion: admissionregistration.k8s.io/v1alpha1
kind: ValidatingAdmissionPolicy
metadata:
  name: m0002.metadata.portefaix.xyz
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["services"]
    # - apiGroups:   [""]
    #   apiVersions: ["v1"]
    #   operations:  ["CREATE", "UPDATE"]
    #   resources:   ["pods"]
    # - apiGroups:   ["apps"]
    #   apiVersions: ["v1"]
    #   operations:  ["CREATE", "UPDATE"]
    #   resources:   ["deployments","replicasets","daemonsets","statefulsets"]
    # - apiGroups:   ["batch"]
    #   apiVersions: ["v1"]
    #   operations:  ["CREATE", "UPDATE"]
    #   resources:   ["jobs","cronjobs"]
  validations:
  - expression: >
      'a8r.io/description' in object.metadata.labels &&
      'a8r.io/owner' in object.metadata.labels &&
      'a8r.io/bugs' in object.metadata.labels &&
      'a8r.io/documentation' in object.metadata.labels &&
      'a8r.io/repository' in object.metadata.labels &&
      'a8r.io/support' in object.metadata.labels
    message: "a8r.io annotations is required."
  auditAnnotations:
  - key: "metadata-a8r-io-recommended-annotations"
    valueExpression: "a8r.io annotations is required"
---
apiVersion: admissionregistration.k8s.io/v1alpha1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: m0002.container.portefaix.xyz
spec:
  policyName: m0002.container.portefaix.xyz
  validationActions: [Warn, Audit]
